--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/rounded_edit_text"
         android:ems="10"
-        android:hint="Enter your password"
+        android:hint="••••••••••"
         android:inputType="textPassword"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
