--- a/app/src/main/res/layout/recycleview_coin.xml
+++ b/app/src/main/res/layout/recycleview_coin.xml
@@ -7,8 +7,9 @@
     android:scrollbarSize="5dp"
     tools:context=".views.CoinListFragment">
 
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewRecipe"
+        android:id="@+id/recyclerViewCoin"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="1dp"
@@ -22,15 +23,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="75dp"
-        android:layout_height="56dp"
-        android:scrollbarSize="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
