--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/activity_main">
+    app:startDestination="@id/mainActivity">
+
     <activity
-        android:id="@+id/activity_main"
+        android:id="@+id/mainActivity"
         android:name="com.example.androidproject.activities.MainActivity"
         android:label="Main Activity" />
 
@@ -16,5 +18,4 @@
     <action
         android:id="@+id/action_mainActivity_to_coinListFragment"
         app:destination="@id/coinListFragment" />
-
 </navigation>
