--- a/app/src/main/res/layout/activity_group_expenses.xml
+++ b/app/src/main/res/layout/activity_group_expenses.xml
@@ -15,8 +15,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profileImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="71dp"
+            android:layout_height="75dp"
             android:src="@drawable/profile_pic"
             app:civ_border_color="#FFFFFF"
             app:civ_border_width="2dp"
@@ -24,18 +24,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/appNameText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:text="amigo"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/locationText"
-            app:layout_constraintStart_toEndOf="@+id/profileImage"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/locationText"
@@ -48,18 +36,30 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profileImage"
-            app:layout_constraintTop_toBottomOf="@+id/appNameText" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.283" />
 
         <TextView
-            android:id="@+id/expenseSummary"
+            android:id="@+id/groupDescriptionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Total owes on 1234$"
+            android:text="Group description"
             android:textColor="#FFFFFF"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/profileImage"
             app:layout_constraintTop_toBottomOf="@+id/locationText" />
+
+        <TextView
+            android:id="@+id/groupCurrency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:text="Currency is:"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/profileImage"
+            app:layout_constraintTop_toBottomOf="@+id/groupDescriptionTextView" />
 
 
         <!-- Dollar Icon -->
@@ -91,12 +91,12 @@
             android:id="@+id/cvAddExpense"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginEnd="100dp"
             app:cardBackgroundColor="#FFFFFF"
             app:cardCornerRadius="20dp"
             app:cardElevation="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cvDollarIcon"
+            app:layout_constraintStart_toEndOf="@+id/expenseSummary"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
